force-app/main/default/objects/Other_Financial_Support__c/Other_Financial_Support__c.object-meta.xml
<CustomObject>
    <label>Other Financial Support</label>
    <nameField>
        <displayFormat>OFS-{0000000}</displayFormat>
        <label>Other Financial Support Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Financial Supports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>