force-app/main/default/objects/Other_Financial_Support__c/fields/Awarded_Budget_with_currencies__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Budget_with_currencies__c</fullName>
    <label>Awarded Budget with currencies</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>