force-app/main/default/objects/Other_Financial_Support__c/fields/Investigator__c.field-meta.xml
<CustomField>
    <fullName>Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigator</label>
    <referenceTo>Investigator__c</referenceTo>
    <relationshipLabel>Other Financial Supports</relationshipLabel>
    <relationshipName>Other_Financial_Supports</relationshipName>
    <type>Lookup</type>
</CustomField>