force-app/main/default/objects/Other_Financial_Support__c/fields/Name_of_the_funder__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_funder__c</fullName>
    <label>Name of the funder</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>