force-app/main/default/objects/Other_Financial_Support__c/fields/Name_s_of_recipient__c.field-meta.xml
<CustomField>
    <fullName>Name_s_of_recipient__c</fullName>
    <label>Name(s) of recipient</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>