force-app/main/default/objects/Other_Financial_Support__c/fields/Title_of_the_project__c.field-meta.xml
<CustomField>
    <fullName>Title_of_the_project__c</fullName>
    <label>Title of the project</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>