force-app/main/default/objects/Other_Financial_Support__c/fields/Your_role_in_the_project__c.field-meta.xml
<CustomField>
    <fullName>Your_role_in_the_project__c</fullName>
    <label>Your role in the project</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>